--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -116,9 +116,9 @@
                     </h2>
                     <p style=" font-size: 1rem;">このツールは、NHK NEWS WEB
                         EASYのウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。</p>
-                    <p style="font-size: 1rem;">始めるには、'作成'ボタンをクリックするだけです。また、'コピー'ボタンを使って内容をクリップボードにコピーすることもできます。</p>
+                    <p style="font-size: 1rem;">始めるには、『作成』ボタンをクリックするだけです。また、『コピー』ボタンを使って内容をクリップボードにコピーすることもできます。</p>
                     <p style="font-size: 1rem;">
-                        なお、ニュースの更新は平日に2回、おおよそ午後12時と午後5時に行われます。これらの更新期間中は、ニュース取得機能が正しく動作しない場合があります。また、'Fetch News'機能は、NHK
+                        なお、ニュースの更新は平日に2回、おおよそ午後12時と午後5時に行われます。これらの更新期間中は、ニュース取得機能が正しく動作しない場合があります。また、『作成』機能は、NHK
                         NEWS WEB EASYウェブサイトの最新のヘッドライン4つからランダムに記事を抽出することにご注意ください。
                     </p>
                 </div>
