--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -180,11 +180,11 @@
                     calculation
                     log.</p>
 
-                <p style="font-size: 0.9rem;">この電卓は四則演算を行います。"<i
-                        class='fa-solid fa-delete-left'></i>"をクリックすると、最右端の数字が削除され、"<i
-                        class='fa-solid fa-equals'></i>"で結果が表示され、"AC <i
-                        class='fa-solid fa-trash-can'></i>"で新しいセッションを開始できます。計算ログをクリアするには、"Clear Log <i
-                        class="fa-solid fa-eraser"></i>"をクリックしてください。</p>
+                <p style="font-size: 0.9rem;">この電卓は四則演算を行います。『<i
+                        class='fa-solid fa-delete-left'></i>』をクリックすると、最右端の数字が削除され、『<i
+                        class='fa-solid fa-equals'></i>』で結果が表示され、『AC <i
+                        class='fa-solid fa-trash-can'></i>』で新しいセッションを開始できます。計算ログをクリアするには、『Clear Log <i
+                        class="fa-solid fa-eraser"></i>』をクリックしてください。</p>
 
                 <br>
 
