Update theme toggle

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -18,7 +18,8 @@
     <title>Projects - KORIN</title>
 </head>
 
-<body>
+<body
+    class="<script>localStorage.getItem('darkMode') === 'true' ? document.write('dark') : document.write('')</script>">
     <div class="container-fluid">
         <div class="row">
             <aside class="col-lg">
