--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -19,7 +19,8 @@
     <title>Gallery - KORIN</title>
 </head>
 
-<body>
+<body
+    class="<script>localStorage.getItem('darkMode') === 'true' ? document.write('dark') : document.write('')</script>">
     <div class="container-fluid">
         <div class="row">
             <aside class="col-lg">
