--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -162,7 +162,7 @@
 
                 <h2>オンラインコース</h2>
                 <ul>
-                    <li><a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0">CS50x:
+                    <li><a href="https://cs50.harvard.edu/certificates/d2b0dff9-33df-4b19-b19a-7a6fa26ee40c">CS50x:
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a
                             href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
