Update calculator docs

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -173,19 +173,34 @@
                 </div>
                 <br>
 
-                <p style="font-size: 0.9rem;">This calculator performs basic arithmetic. Click "<i
-                        class="fa-solid fa-delete-left"></i>" to
+                <p>This calculator performs basic arithmetic. Click "<i class="fa-solid fa-delete-left"></i>" to
                     delete the right-most digit, "<i class="fa-solid fa-equals"></i>" for results, and "AC <i
                         class="fa-solid fa-trash-can"></i>" to
                     start a new session. Use "Clear Log <i class="fa-solid fa-eraser"></i>" button to clear the
-                    calculation
-                    log.</p>
+                    calculation log. Please note that results are rounded to the 6th decimal place.
+                </p>
+                <p>
+                    After obtaining a
+                    result, you can immediately select another operator to start a new calculation with the previous
+                    result. If "<i class="fa-solid fa-equals"></i>" is pressed multiple times, the calculator repeats
+                    the
+                    last operation
+                    with the last number and the result of the previous calculation. You can change the sign of the
+                    current input number using "<i class="fa-solid fa-plus-minus"></i>". This
+                    calculator uses local storage to save the log data and also allows users to download the calculation
+                    log as a text file.
+                </p>
 
-                <p style="font-size: 0.9rem;">この電卓は四則演算を行います。『<i
-                        class='fa-solid fa-delete-left'></i>』をクリックすると、最右端の数字が削除され、『<i
+                <p>この電卓は四則演算を行います。『<i class='fa-solid fa-delete-left'></i>』をクリックすると、最右端の数字が削除され、『<i
                         class='fa-solid fa-equals'></i>』で結果が表示され、『AC <i
                         class='fa-solid fa-trash-can'></i>』で新しいセッションを開始できます。計算ログをクリアするには、『Clear Log <i
-                        class="fa-solid fa-eraser"></i>』をクリックしてください。</p>
+                        class="fa-solid fa-eraser"></i>』をクリックしてください。結果は6番目の小数位まで四捨五入されます。
+                </p>
+                <p>
+                    結果を得た後、前回の結果を使ってすぐに別の演算子を選択し、新しい計算を開始することができます。『<i
+                        class="fa-solid fa-equals"></i>』を何度も押すと、計算機は最後の操作を前回の結果と最後の数字で繰り返します。現在の入力数字の符号を変更する関数『<i
+                        class="fa-solid fa-plus-minus"></i>』も用意しています。この計算機はローカルストレージを使用してログデータを保存し、ユーザーが計算ログをテキストファイルとしてダウンロードすることも可能です。
+                </p>
 
                 <br>
 
