Update font style

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -191,12 +191,13 @@
                     log as a text file.
                 </p>
 
-                <p>この電卓は四則演算を行います。『<i class='fa-solid fa-delete-left'></i>』をクリックすると、最右端の数字が削除され、『<i
+                <p style="font-family: 'Noto Sans JP', sans-serif">この電卓は四則演算を行います。『<i
+                        class='fa-solid fa-delete-left'></i>』をクリックすると、最右端の数字が削除され、『<i
                         class='fa-solid fa-equals'></i>』で結果が表示され、『AC <i
                         class='fa-solid fa-trash-can'></i>』で新しいセッションを開始できます。計算ログをクリアするには、『Clear Log <i
                         class="fa-solid fa-eraser"></i>』をクリックしてください。結果は6番目の小数位まで四捨五入されます。
                 </p>
-                <p>
+                <p style="font-family: 'Noto Sans JP', sans-serif">
                     結果を得た後、前回の結果を使ってすぐに別の演算子を選択し、新しい計算を開始することができます。『<i
                         class="fa-solid fa-equals"></i>』を何度も押すと、計算機は最後の操作を前回の結果と最後の数字で繰り返します。現在の入力数字の符号を変更する関数『<i
                         class="fa-solid fa-plus-minus"></i>』も用意しています。この計算機はローカルストレージを使用してログデータを保存し、ユーザーが計算ログをテキストファイルとしてダウンロードすることも可能です。
