Update selected projects

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -203,9 +203,44 @@
                         class="fa-solid fa-plus-minus"></i>』も用意しています。この計算機はローカルストレージを使用してログデータを保存し、ユーザーが計算ログをテキストファイルとしてダウンロードすることも可能です。
                 </p>
 
-                <br>
 
                 <h2><a href="https://www.python.org/" style="text-decoration: none;"><i class="fa-brands fa-python"></i>
+                    </a>Selected Projects (主なプロジェクト)
+                </h2>
+                <ol>
+                    <li><a href="https://github.com/KORINZ/nhk-news-scraper-gui">NHK News Web Easy Scraper
+                            <i class="fas fa-external-link-alt"></i></a>: 📰 Scraping news articles from NHK News Web
+                        Easy and sending a customized quiz to students via LINE Messaging API. It also came with GUI.
+                    </li>
+                    <li><a href="https://github.com/KORINZ/sudoku-backtracking-animation">Sudoku Game with Backtracking
+                            Algorithm Animation
+                            <i class="fas fa-external-link-alt"></i></a>: 🔢 ナンプレ×バックトラッキング A classic Sudoku game
+                        implementation in Python using the Pygame library that can play a backtracking animation.
+                    </li>
+                    <li><a href="https://github.com/KORINZ/athlete-numbers-generator">Athlete Numbers Generator
+                            <i class="fas fa-external-link-alt"></i></a>: 🏃‍♀️ (ゼッケンジェネレーター) A program automatically
+                        generates competition numbers for athletes based on their names, numberings, starting times, and
+                        sponsors.
+                    </li>
+                    <li><a href="https://github.com/KORINZ/screen-region-ocr-gui">
+                            Screen Region OCR GUI
+                            <i class="fas fa-external-link-alt"></i></a>: 📸 This Python application allows users to
+                        perform Optical Character Recognition (OCR) on a selected region of the screen or an imported
+                        image.
+                    </li>
+                    <li><a href="https://github.com/KORINZ/entry-sheet-auto-filler">Entry Sheet Auto Filler
+                            <i class="fas fa-external-link-alt"></i></a>: 📝 (エントリーシートオートフィラー) A program that
+                        automatically fills entry sheet with personal information.
+                    </li>
+                    <li><a href="https://github.com/KORINZ/translator-deepl-gtts">Translation and Text-to-Speech Tool
+                            <i class="fas fa-external-link-alt"></i></a>: 🔊 This project contains a script for
+                        translating text or documents from one language to another using the DeepL API, and a
+                        text-to-speech tool for converting translated text to audio using Google Text-to-Speech (gTTS).
+                    </li>
+                </ol>
+
+
+                <h2><i class="fa-solid fa-code"></i>
                     </a>Preparing (準備中)
                 </h2>
                 <div class="language-plaintext highlighter-rouge">
