--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -98,7 +98,8 @@
             <main class="col-lg">
 
                 <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" style="text-decoration: none;"><i
-                            class="fa-brands fa-square-js"></i></a> Basic Calculator (電卓)</h2>
+                            class="fa-brands fa-square-js"></i></a> Yet Another Web-based Basic Calculator (再びWEB電卓)
+                </h2>
                 <div id="wrapper">
                     <div id="calculator">
                         <div id="display"></div>
