Update contact info

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -138,11 +138,19 @@
                 </p>
 
                 <h2>連絡先</h2>
-                <p>ASCIIから文字列への変換を利用した以下のPythonスクリプトを実行することで、私に連絡を取ることができます：</p>
+                <p>以下のPythonスクリプトを実行することで、ASCIIから文字列への変換を利用して私に連絡を取ることができます：</p>
                 <div class="language-plaintext highlighter-rouge">
                     <div class="highlight">
                         <pre
                             class="highlight"><code class="command">"".join(chr(i) for i in (107, 111, 114, 105, 110, 46, 106, 97, 112, 97, 110, 64, 103, 109, 97, 105, 108, 46, 99, 111, 109))</code></pre>
+                    </div>
+                </div>
+
+                <p>または、ブラウザのコンソールで直接実行できるJavaScriptバージョン:</p>
+                <div class="language-plaintext highlighter-rouge">
+                    <div class="highlight">
+                        <pre
+                            class="highlight"><code class="command">String.fromCharCode(107, 111, 114, 105, 110, 46, 106, 97, 112, 97, 110, 64, 103, 109, 97, 105, 108, 46, 99, 111, 109);</code></pre>
                     </div>
                 </div>
 
