--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -222,7 +222,8 @@
                     <details>
                         <summary><span style="font-size: 1.17em; font-weight: bold;">How does this game work?</span>
                         </summary>
-                        <p>This game uses a popular board game, Tic-Tac-Toe, to demonstrate an artificial intelligence
+                        <p>This project uses a popular board game, Tic-Tac-Toe, to demonstrate an artificial
+                            intelligence
                             algorithm called Minimax. In Tic-Tac-Toe, two players take turns marking spaces in a 3x3
                             grid with their symbol (either 'X' or 'O'). The goal is to be the first to get three of your
                             symbols in a row, either horizontally, vertically, or diagonally.</p>
