Update details tag to open

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -219,7 +219,7 @@
                             class="fa-solid fa-rotate-left"></i></button>
                 </div>
                 <div class="explanation">
-                    <details>
+                    <details open>
                         <summary><span style="font-size: 1.17em; font-weight: bold;">How does this game work?</span>
                         </summary>
                         <p>This project uses a popular board game, Tic-Tac-Toe, to demonstrate an artificial
