--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -223,7 +223,7 @@
                         <summary><span style="font-size: 1.17em; font-weight: bold;">How does this game work?</span>
                         </summary>
                         <p>This project uses a popular board game, Tic-Tac-Toe, to demonstrate an artificial
-                            intelligence
+                            intelligence (AI)
                             algorithm called Minimax. In Tic-Tac-Toe, two players take turns marking spaces in a 3x3
                             grid with their symbol (either 'X' or 'O'). The goal is to be the first to get three of your
                             symbols in a row, either horizontally, vertically, or diagonally.</p>
@@ -240,7 +240,7 @@
                     <details>
                         <summary><span style="font-size: 1.17em; font-weight: bold;">What is Minimax?</span>
                         </summary>
-                        <p>Minimax is a type of decision-making algorithm in artificial intelligence (AI) and game
+                        <p>Minimax is a type of decision-making algorithm in artificial intelligence and game
                             theory, often used for making decisions in turn-based, adversarial games like
                             Tic-Tac-Toe or
                             Chess.</p>
