--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -231,10 +231,11 @@
                             clicking on any empty square to place your 'X'. The AI then calculates its move and places
                             an 'O' on the board. It's worth noting that the AI uses a technique called Alpha-Beta
                             pruning as part of the Minimax algorithm. This technique assumes optimal play from both
-                            players. With 255,168 possible valid completed games, but only 26,830 unique ones due to
-                            symmetry, the AI is capable of analyzing all scenarios and responding with the best move.
-                            Consequently, you can never win against this perfect AI; the best outcome you can achieve is
-                            a draw if you play optimally. Good luck!</p>
+                            players. Tic-Tac-Toe, despite its simplicity, offers a wide array of gameplay possibilities:
+                            there are 255,168 total possible games, reduced to 26,830 when considering unique games up
+                            to rotations and reflections. With the ability to analyze all these scenarios, the AI is
+                            capable of responding with the best move. Consequently, you can never win against this
+                            perfect AI; the best outcome you can achieve is a draw if you play optimally. Good luck!</p>
                     </details>
 
                     <details>
@@ -283,7 +284,7 @@
                 <h2><a href="https://www.python.org/" style="text-decoration: none;"><i class="fa-brands fa-python"></i>
                     </a>Selected Projects (主なプロジェクト)
                 </h2>
-                <ol>
+                <ol start="0">
                     <li><a href="https://github.com/KORINZ/nhk-news-scraper-gui">NHK News Web Easy Scraper
                             <i class="fas fa-external-link-alt"></i></a>: 📰 Scraping news articles from NHK News
                         Web
