Add new Python project

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -322,6 +322,13 @@
                         text-to-speech tool for converting translated text to audio using Google Text-to-Speech
                         (gTTS).
                     </li>
+                    <li><a href="https://github.com/KORINZ/strava-data-visualization-tool">Translation and
+                            Text-to-Speech
+                            Tool
+                            <i class="fas fa-external-link-alt"></i></a>: 🏃 This Python tool fetches and visualizes
+                        your Strava activity data. You can use it to analyze your running, cycling, swimming, etc.
+                        activities.
+                    </li>
                 </ol>
 
                 <br>
