Add research HTML page

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -77,6 +77,8 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../../index.html">Homepage</a> / <a href="../ja/index.html">ホームページ</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="research.html">Research</a></li>
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="gallery.html">Gallery</a></li>
                     </ul>
                     <hr>
