--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -82,6 +82,8 @@
                                 href="../common/projects.html">プロジェクト</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../common/gallery.html">ギャラリー</a></li>
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="../common/research.html">研究</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
