--- a/static/styles.css
+++ b/static/styles.css
@@ -15388,3 +15388,15 @@ body.dark #calculation-log {
     height: 20px;
     /* this makes sure the game result div always takes up space */
 }
+
+.pdf-container {
+    position: relative;
+    height: 80vh;
+    width: 100%;
+}
+
+.pdf-viewer {
+    border: none;
+    width: 100%;
+    height: 100%;
+}
