Update open button

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -101,6 +101,10 @@
 
             <main class="col-lg">
                 <h2>Research Topic</h2>
+                <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
+                    Open in new tab
+                    <i class="fas fa-external-link-alt ms-1"></i>
+                </a>
                 <div class="pdf-container">
                     <iframe class="pdf-viewer" src="../../assets/research_summary.pdf#view=Fit"></iframe>
                 </div>
