--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -105,7 +105,8 @@
             </aside>
 
             <main class="col-lg">
-                <h2>Research Topic</h2>
+                <h2>3D Extrusion Bioprinting</h2>
+                <h3>Research Summary Slides</h3>
                 <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
@@ -113,6 +114,7 @@
                 <iframe id="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_summary.pdf"
                     width="100%" height="100%" style="border: none;"></iframe>
+
             </main>
 
 
